# SSolar-GOA

./: CHANGELOG.md  requirements-doc.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: solo.yml
example_data/: input_libRadtran_sealevel_SZA6deg
solo/: __init__.py  radtran.py
solo/api/: Atmosphere.py
src/solo/: __init__.py  radtran.py
src/solo/api/: Atmosphere.py  Geometry.py
test/solo/: __init__.py  test_Geometry.py
test/solo/dat/: create_example_data.py
