[metadata]
license_files =
    COPYING

[bdist_wheel]
universal = 1

[sdist]
formats = zip

[flake8]
ignore =
    E301,E306,E402,E501,E731,F401,F403,W503,W504
# E301: expected-blank-line-missing
# E306: no-blank-line-before-nested-def
# E402: module-import-not-at-top-file
# E501: line-too-long
# E731: used-lambda
# F401: unused-import
# F403: wildcard-import
# W503: line-break-before-binary-operator
# W504: line-break-after-binary-operator

[tool:pytest]
filterwarnings =
    error
    # To be removed when `coverage` is upgraded for Python 3.10+.
    ignore:currentThread\(\) is deprecated:DeprecationWarning::
    # To be removed when `pytest` is upgraded for Python 3.10+.
    ignore:(Attribute )?.* is deprecated and will be removed:DeprecationWarning::
    ignore:TestResult has no addDuration method:RuntimeWarning:unittest.case:

[coverage:paths]
source =
    src
    /**/pyenv/versions/**/site-packages

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    raise NotImplementedError
    if __name__ == .__main__.:
